iLoC/src/it/cnr/istc/iloc/translators/mrcpsp/MRCPSPParser.java
// Generated from MRCPSP.g4 by ANTLR 4.4
package it.cnr.istc.iloc.translators.mrcpsp;

import java.util.List;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MRCPSPParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int LBRACKET = 1, RBRACKET = 2, MINUS = 3, NumericLiteral = 4, WS = 5;
    public static final String[] tokenNames = {
        "<INVALID>", "'['", "']'", "'-'", "NumericLiteral", "WS"
    };
    public static final int RULE_compilation_unit = 0, RULE_header = 1, RULE_activities = 2, RULE_activity = 3,
            RULE_direct_successors = 4, RULE_weights = 5, RULE_resource_usages = 6,
            RULE_resource_usage = 7, RULE_modes = 8, RULE_activity_mode = 9, RULE_renewable_resources_uses = 10,
            RULE_nonrenewable_resources_uses = 11, RULE_doubly_constrained_resources_uses = 12,
            RULE_capacities = 13, RULE_renewable_resources_capacities = 14, RULE_nonrenewable_resources_capacities = 15,
            RULE_doubly_constrained_resources_capacities = 16, RULE_positive_number = 17,
            RULE_number = 18;
    public static final String[] ruleNames = {
        "compilation_unit", "header", "activities", "activity", "direct_successors",
        "weights", "resource_usages", "resource_usage", "modes", "activity_mode",
        "renewable_resources_uses", "nonrenewable_resources_uses", "doubly_constrained_resources_uses",
        "capacities", "renewable_resources_capacities", "nonrenewable_resources_capacities",
        "doubly_constrained_resources_capacities", "positive_number", "number"
    };

    @Override
    public String getGrammarFileName() {
        return "MRCPSP.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }
    int n_real_activities;
    int n_renewable_resources;
    int n_nonrenewable_resources;
    int n_doubly_constrained_resources;
    int[] n_modes;
    int[] n_direct_successors;

    public MRCPSPParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class Compilation_unitContext extends ParserRuleContext {

        public ActivitiesContext activities() {
            return getRuleContext(ActivitiesContext.class, 0);
        }

        public HeaderContext header() {
            return getRuleContext(HeaderContext.class, 0);
        }

        public Resource_usagesContext resource_usages() {
            return getRuleContext(Resource_usagesContext.class, 0);
        }

        public CapacitiesContext capacities() {
            return getRuleContext(CapacitiesContext.class, 0);
        }

        public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compilation_unit;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterCompilation_unit(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitCompilation_unit(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitCompilation_unit(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Compilation_unitContext compilation_unit() throws RecognitionException {
        Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilation_unit);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(38);
                header();
                setState(39);
                activities();
                setState(40);
                resource_usages();
                setState(41);
                capacities();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class HeaderContext extends ParserRuleContext {

        public Positive_numberContext n_real_activities;
        public Positive_numberContext n_renewable_resources;
        public Positive_numberContext n_nonrenewable_resources;
        public Positive_numberContext n_doubly_constrained_resources;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public HeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_header;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterHeader(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitHeader(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitHeader(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final HeaderContext header() throws RecognitionException {
        HeaderContext _localctx = new HeaderContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_header);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                ((HeaderContext) _localctx).n_real_activities = positive_number();
                n_real_activities = ((HeaderContext) _localctx).n_real_activities.v;
                setState(45);
                ((HeaderContext) _localctx).n_renewable_resources = positive_number();
                n_renewable_resources = ((HeaderContext) _localctx).n_renewable_resources.v;
                setState(47);
                ((HeaderContext) _localctx).n_nonrenewable_resources = positive_number();
                n_nonrenewable_resources = ((HeaderContext) _localctx).n_nonrenewable_resources.v;
                setState(49);
                ((HeaderContext) _localctx).n_doubly_constrained_resources = positive_number();
                n_doubly_constrained_resources = ((HeaderContext) _localctx).n_doubly_constrained_resources.v;
            }

            n_modes = new int[n_real_activities + 2];
            n_direct_successors = new int[n_real_activities + 2];

        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ActivitiesContext extends ParserRuleContext {

        public int c_activity;

        public List<ActivityContext> activity() {
            return getRuleContexts(ActivityContext.class);
        }

        public ActivityContext activity(int i) {
            return getRuleContext(ActivityContext.class, i);
        }

        public ActivitiesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_activities;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterActivities(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitActivities(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitActivities(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ActivitiesContext activities() throws RecognitionException {
        ActivitiesContext _localctx = new ActivitiesContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_activities);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(52);
                                if (!(_localctx.c_activity < n_real_activities + 2)) {
                                    throw new FailedPredicateException(this, "$c_activity < n_real_activities + 2");
                                }
                                _localctx.c_activity++;
                                setState(54);
                                activity();
                            }
                        }
                    }
                    setState(59);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ActivityContext extends ParserRuleContext {

        public Positive_numberContext id;
        public Positive_numberContext n_modes;
        public Positive_numberContext n_direct_successors;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public Direct_successorsContext direct_successors() {
            return getRuleContext(Direct_successorsContext.class, 0);
        }

        public WeightsContext weights(int i) {
            return getRuleContext(WeightsContext.class, i);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public List<WeightsContext> weights() {
            return getRuleContexts(WeightsContext.class);
        }

        public ActivityContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_activity;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterActivity(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitActivity(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitActivity(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ActivityContext activity() throws RecognitionException {
        ActivityContext _localctx = new ActivityContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_activity);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                ((ActivityContext) _localctx).id = positive_number();
                setState(61);
                ((ActivityContext) _localctx).n_modes = positive_number();
                setState(62);
                ((ActivityContext) _localctx).n_direct_successors = positive_number();
                setState(63);
                direct_successors(((ActivityContext) _localctx).n_direct_successors.v);
                setState(67);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(64);
                                weights();
                            }
                        }
                    }
                    setState(69);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
            }

            n_modes[((ActivityContext) _localctx).id.v] = ((ActivityContext) _localctx).n_modes.v;
            n_direct_successors[((ActivityContext) _localctx).id.v] = ((ActivityContext) _localctx).n_direct_successors.v;

        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Direct_successorsContext extends ParserRuleContext {

        public int n_successors;
        public int c_successor;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public Direct_successorsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public Direct_successorsContext(ParserRuleContext parent, int invokingState, int n_successors) {
            super(parent, invokingState);
            this.n_successors = n_successors;
        }

        @Override
        public int getRuleIndex() {
            return RULE_direct_successors;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterDirect_successors(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitDirect_successors(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitDirect_successors(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Direct_successorsContext direct_successors(int n_successors) throws RecognitionException {
        Direct_successorsContext _localctx = new Direct_successorsContext(_ctx, getState(), n_successors);
        enterRule(_localctx, 8, RULE_direct_successors);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(75);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(70);
                                if (!(_localctx.c_successor < _localctx.n_successors)) {
                                    throw new FailedPredicateException(this, "$c_successor < $n_successors");
                                }
                                _localctx.c_successor++;
                                setState(72);
                                positive_number();
                            }
                        }
                    }
                    setState(77);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class WeightsContext extends ParserRuleContext {

        public List<NumberContext> number() {
            return getRuleContexts(NumberContext.class);
        }

        public NumberContext number(int i) {
            return getRuleContext(NumberContext.class, i);
        }

        public WeightsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_weights;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterWeights(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitWeights(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitWeights(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final WeightsContext weights() throws RecognitionException {
        WeightsContext _localctx = new WeightsContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_weights);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(LBRACKET);
                setState(80);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(79);
                            number();
                        }
                    }
                    setState(82);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == MINUS || _la == NumericLiteral);
                setState(84);
                match(RBRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Resource_usagesContext extends ParserRuleContext {

        public int c_activity;

        public Resource_usageContext resource_usage(int i) {
            return getRuleContext(Resource_usageContext.class, i);
        }

        public List<Resource_usageContext> resource_usage() {
            return getRuleContexts(Resource_usageContext.class);
        }

        public Resource_usagesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_resource_usages;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterResource_usages(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitResource_usages(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitResource_usages(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Resource_usagesContext resource_usages() throws RecognitionException {
        Resource_usagesContext _localctx = new Resource_usagesContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_resource_usages);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(86);
                                if (!(_localctx.c_activity < n_real_activities + 2)) {
                                    throw new FailedPredicateException(this, "$c_activity < n_real_activities + 2");
                                }
                                _localctx.c_activity++;
                                setState(88);
                                resource_usage();
                            }
                        }
                    }
                    setState(93);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Resource_usageContext extends ParserRuleContext {

        public Positive_numberContext activity_id;

        public ModesContext modes() {
            return getRuleContext(ModesContext.class, 0);
        }

        public Positive_numberContext positive_number() {
            return getRuleContext(Positive_numberContext.class, 0);
        }

        public Resource_usageContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_resource_usage;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterResource_usage(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitResource_usage(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitResource_usage(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Resource_usageContext resource_usage() throws RecognitionException {
        Resource_usageContext _localctx = new Resource_usageContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_resource_usage);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                ((Resource_usageContext) _localctx).activity_id = positive_number();
                setState(95);
                modes(((Resource_usageContext) _localctx).activity_id.v);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModesContext extends ParserRuleContext {

        public int activity_id;
        public int c_mode;

        public List<Activity_modeContext> activity_mode() {
            return getRuleContexts(Activity_modeContext.class);
        }

        public Activity_modeContext activity_mode(int i) {
            return getRuleContext(Activity_modeContext.class, i);
        }

        public ModesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ModesContext(ParserRuleContext parent, int invokingState, int activity_id) {
            super(parent, invokingState);
            this.activity_id = activity_id;
        }

        @Override
        public int getRuleIndex() {
            return RULE_modes;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterModes(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitModes(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitModes(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final ModesContext modes(int activity_id) throws RecognitionException {
        ModesContext _localctx = new ModesContext(_ctx, getState(), activity_id);
        enterRule(_localctx, 16, RULE_modes);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(97);
                                if (!(_localctx.c_mode < n_modes[_localctx.activity_id])) {
                                    throw new FailedPredicateException(this, "$c_mode < n_modes[$activity_id]");
                                }
                                _localctx.c_mode++;
                                setState(99);
                                activity_mode();
                            }
                        }
                    }
                    setState(104);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Activity_modeContext extends ParserRuleContext {

        public Positive_numberContext mode_id;
        public Positive_numberContext activity_duration;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public Doubly_constrained_resources_usesContext doubly_constrained_resources_uses() {
            return getRuleContext(Doubly_constrained_resources_usesContext.class, 0);
        }

        public Renewable_resources_usesContext renewable_resources_uses() {
            return getRuleContext(Renewable_resources_usesContext.class, 0);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public Nonrenewable_resources_usesContext nonrenewable_resources_uses() {
            return getRuleContext(Nonrenewable_resources_usesContext.class, 0);
        }

        public Activity_modeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_activity_mode;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterActivity_mode(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitActivity_mode(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitActivity_mode(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Activity_modeContext activity_mode() throws RecognitionException {
        Activity_modeContext _localctx = new Activity_modeContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_activity_mode);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                ((Activity_modeContext) _localctx).mode_id = positive_number();
                setState(106);
                ((Activity_modeContext) _localctx).activity_duration = positive_number();
                setState(107);
                renewable_resources_uses();
                setState(108);
                nonrenewable_resources_uses();
                setState(109);
                doubly_constrained_resources_uses();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Renewable_resources_usesContext extends ParserRuleContext {

        public int c_res;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public Renewable_resources_usesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_renewable_resources_uses;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterRenewable_resources_uses(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitRenewable_resources_uses(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitRenewable_resources_uses(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Renewable_resources_usesContext renewable_resources_uses() throws RecognitionException {
        Renewable_resources_usesContext _localctx = new Renewable_resources_usesContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_renewable_resources_uses);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(111);
                                if (!(_localctx.c_res < n_renewable_resources)) {
                                    throw new FailedPredicateException(this, "$c_res < n_renewable_resources");
                                }
                                _localctx.c_res++;
                                setState(113);
                                positive_number();
                            }
                        }
                    }
                    setState(118);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Nonrenewable_resources_usesContext extends ParserRuleContext {

        public int c_res;

        public Positive_numberContext positive_number(int i) {
            return getRuleContext(Positive_numberContext.class, i);
        }

        public List<Positive_numberContext> positive_number() {
            return getRuleContexts(Positive_numberContext.class);
        }

        public Nonrenewable_resources_usesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_nonrenewable_resources_uses;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).enterNonrenewable_resources_uses(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MRCPSPListener) {
                ((MRCPSPListener) listener).exitNonrenewable_resources_uses(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MRCPSPVisitor) {
                return ((MRCPSPVisitor<? extends T>) visitor).visitNonrenewable_resources_uses(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Nonrenewable_resources_usesContext nonrenewable_resources_uses() throws RecognitionException {
        Nonrenewable_resources_usesContext _localctx = new Nonrenewable_resources_usesContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_nonrenewable_resources_uses);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(119);
                                if (!(_localctx.c_res < n_nonrenewable_resources)) {
                                    throw new FailedPredicateException(this, "$c_res < n_nonrenewable_resources");
                                }
                                _localctx.c_res++;
                                setState(121);
                                positive_number();
                            }
